--- a/examproject/src/Components/Navbar/Navbar.css
+++ b/examproject/src/Components/Navbar/Navbar.css
@@ -1,28 +1,17 @@
 nav {
-  width: 100%;
-  height: 68px;
-  align-items: center;
-  display: flex;
+    width: 100%;
+    height: 70px;
+    position: absolute;
+    padding-top: 15px;
 }
 
-.firstVector {
-  width: 37px;
-  height: 17.7px;
+.navVector {
+    width: 35px;
+    height: 15px;
+    margin-top: 20px;
 }
 
 .navLogo {
-  width: 200px;
-  height: 50px;
-  /* margin-top: 34px; */
-}
-
-.callIcon {
-  width: 45px;
-  height: 45px;
-  background: linear-gradient(142.65deg, #f57350 23.05%, #f4512d 104.84%);
-  box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.15);
-  align-items: center;
-  justify-content: center;
-  display: flex;
-  border-radius: 22.5px;
+    width: 180px;
+    height: 40px;
 }
