--- a/examproject/src/Components/Navbar/Navbar.css
+++ b/examproject/src/Components/Navbar/Navbar.css
@@ -1,17 +1,27 @@
 nav {
-    width: 100%;
-    height: 70px;
-    position: absolute;
-    padding-top: 15px;
+  width: 100%;
+  height: 70px;
+  position: absolute;
+  padding-top: 15px;
 }
 
 .navVector {
-    width: 35px;
-    height: 15px;
-    margin-top: 20px;
+  width: 35px;
+  height: 15px;
+  margin-top: 20px;
 }
 
 .navLogo {
-    width: 180px;
-    height: 40px;
+  width: 180px;
+  height: 40px;
+}
+
+.callBox {
+  background: #f57350;
+  width: 50px;
+  height: 50px;
+  border-radius: 25px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
