--- a/examproject/src/Components/Section_3/Section3.css
+++ b/examproject/src/Components/Section_3/Section3.css
@@ -5,6 +5,10 @@
   /* justify-content: space-between; */
 }
 
+.mycontainer {
+  margin: 0;
+}
+
 .verticalVector {
   margin-top: 50px;
   margin-bottom: 60px;
@@ -27,7 +31,7 @@
 }
 
 .section3Text {
-  width: 470px;
+  width: 367px;
   font-family: "PT Mono";
   font-style: normal;
   font-weight: 400;
